5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1590_1017.log
== SUBMITION (2019-03-22 19:46:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2*)*cos
print(d,5)
-- EXECUTION TIME:
0.146325
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 15
    d=acos(s1*s2+c1*c2*)*cos
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:46:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2*)*cos
print(d,5)
-- ERROR:
File "XXXX", line 15
    d=acos(s1*s2+c1*c2*)*cos
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:46:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2*)
print(d,5)
-- EXECUTION TIME:
0.158245
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 15
    d=acos(s1*s2+c1*c2*)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:46:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2*)
print(d,5)
-- ERROR:
File "XXXX", line 15
    d=acos(s1*s2+c1*c2*)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:47:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2*)
print(radians(d,5))
-- EXECUTION TIME:
0.121234
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 15
    d=acos(s1*s2+c1*c2*)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:48:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:48:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 =radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:48:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 =radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:50:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)
print(d,5)
-- OUTPUT:
0.0009139416627865439 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:50:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)
print(d)
-- EXECUTION TIME:
0.19799
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
0.0009139416627865439
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:50:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)
print(round(d,5))
-- EXECUTION TIME:
0.129737
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
0.00091
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:50:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)
print(round(d,5))
-- OUTPUT:
0.00091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:54:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)
print(round(d,5))
-- EXECUTION TIME:
0.138294
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
0.00091
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 19:59:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)*cos(g1-g2)
print(round(d,5))
-- EXECUTION TIME:
0.132285
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
0.00091
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)*cos(g1-g2)
print(round(d,5))
-- OUTPUT:
0.00091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)*cos(g1-g2)
print(round(d,5))
-- OUTPUT:
0.00091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 19:59:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=acos(s1*s2+c1*c2)*cos(g1-g2)
print(round(d,5))
-- OUTPUT:
0.00091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:01:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos(s1*s2+c1*c2)*cos(g1-g2)
print(round(d,5))


-- EXECUTION TIME:
0.199319
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
5.82255
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:02:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,5))


-- EXECUTION TIME:
0.208052
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.50908
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:03:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))


-- EXECUTION TIME:
0.150679
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:03:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))


-- OUTPUT:
50.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:04:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))


-- EXECUTION TIME:
0.146773
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:07:33) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))


-- OUTPUT:
50.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:07:35) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
from math import*
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))


-- EXECUTION TIME:
0.118173
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 20:48:41) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))
-- OUTPUT:
50.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 20:50:59) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
s1=sin(t1)
s2=sin(t2)
c1=cos(t1)
c2=cos(t2)
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.257319
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:04:30) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.193268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 7, in <module>
    d=R*acos((s1*s2+c1*c2)*cos(g1-g2))
NameError: name 's1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:05:16) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
d=R*acos((sin(t1)*sin(t2)+cos(t1)*cos(t2))*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.117999
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:05:29) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: ")))
g1=radians(float(input("longitude de P1:")))
t2=radians(float(input("Latitude de P2:")))
g2=radians(float(input("Longitude de P2:")))
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- EXECUTION TIME:
0.242399
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:37:26) 
-- CODE:
from math import*
t1 =radians(float(input("Latitude de P1: "))
g1=radians(float(input("longitude de P1:"))
t2=radians(float(input("Latitude de P2:"))
g2=radians(float(input("Longitude de P2:"))
R=6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))
-- ERROR:
File "XXXX", line 3
    g1=radians(float(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
